# lan-file-share

./: .bazelignore  .bazelrc  .gazelle.yml  .gitignore  BUILD.bazel  MODULE.bazel  README.md  Taskfile.yml  WORKSPACE.bazel  app.go  app_discovery.go  app_runtime.go  app_transfer.go  app_zip.go  app_zip_test.go  go.mod  go.sum  main.go  wails.json
.github/workflows/: build.yml  release.yml
docs/superpowers/plans/: 2026-05-21-lan-file-share.md  2026-05-22-auto-update.md  2026-05-22-drag-drop-file-transfer.md
docs/superpowers/specs/: 2026-05-21-lan-file-share-design.md  2026-05-22-auto-update-design.md  2026-05-22-drag-drop-file-transfer-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/bindings/lan-file-share/: app.js  app.ts
frontend/bindings/lan-file-share/internal/model/: index.js  index.ts  models.js  models.ts
frontend/bindings/lan-file-share/internal/updater/: index.ts  service.ts
frontend/bindings/nearfy/internal/updater/: models.ts
frontend/src/: App.css  App.tsx  style.css
frontend/src/components/: DeviceItem.tsx  Sidebar.tsx  TopBar.tsx  TransferItem.tsx  TransferPanel.tsx  UpdateModal.tsx  UpdateToast.tsx
frontend/src/hooks/: useDevices.ts  useDragDrop.ts  useTransfers.ts  useUpdate.ts
frontend/wailsjs/go/: models.ts
frontend/wailsjs/go/main/: App.d.ts  App.js
internal/discovery/: discovery.go  discovery_test.go
internal/model/: device.go  device_test.go  transfer.go  transfer_test.go
internal/protocol/: codec.go  codec_test.go  message.go
internal/queue/: manager.go  manager_test.go
internal/transfer/: engine.go  engine_test.go  state.go  state_test.go
internal/updater/: checker.go  checker_test.go  downloader.go  downloader_test.go  installer.go  service.go  service_test.go  version.go  version_test.go
