module(
    name = "lan-file-share",
    version = "0.1.0",
)

bazel_dep(name = "rules_go", version = "0.53.0")
bazel_dep(name = "gazelle", version = "0.42.0")

go_sdk = use_repo_rule("@rules_go//go:toolchain.bzl", "go_sdk")
go_sdk(name = "go_sdk", version = "1.25.0")

# Node.js for frontend builds
bazel_dep(name = "rules_nodejs", version = "6.3.2")
